--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,24 @@
         android:theme="@style/Theme.YourApp"
         tools:targetApi="31">
         <activity
+            android:name=".WebViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".YtbActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TopicActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SplashActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".AuthActivity"
             android:exported="false" />
         <activity
@@ -30,18 +48,10 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-           />
-
-        <activity android:name=".GoogleSignInActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-
+            android:exported="true" />
+        <activity
+            android:name=".GoogleSignInActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
